# Receipt_rec_sys

./: README.md  pyproject.toml  receipt_rec_first_test.py  test.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/components/AuthForm/: AuthForm.tsx
client/src/components/Header/: Header.tsx
client/src/components/Layout/: Layout.tsx
client/src/components/Loader/: Loader.tsx
client/src/components/ProductsList/: Product.tsx  ProductsList.tsx  ProductsRenderer.tsx
client/src/components/Screens/Dashboard/: index.tsx
client/src/components/Screens/Home/: Home.tsx
client/src/components/Screens/Profile/: Profile.tsx
client/src/components/Screens/SignIn/: SignIn.tsx
client/src/components/UploadImageWidget/: UploadImageWidget.tsx
client/src/images/: Images.ts
client/src/services/: authentication.ts
client/src/types/: index.ts
client/src/utils/: index.ts
server/: pyproject.toml  receipts_recognition_test.txt
server/src/: main.py  mainn.py
server/src/Preprocesing/: detection.py  preprocesing.py
server/src/analytics/: analytics.py
server/src/authentication/: authentication.py
server/src/client_image_processing/: add_purchases.py  image_processing.py
server/src/db/: connect_db.py
server/src/detection/: detection.py
server/src/extraction/: extraction.py
server/src/postprocessing/: post_processing.py
server/src/preprocessing/: detection.py  post_processing.py  preprocessing.py
server/src/recognition/: recognition.py
server/src/utils/: utils.py
src/: main.py
(+2 files in other folders)
