[tool.poetry]
name = "receipt-recognition-system"
version = "0.1.0"
description = ""
authors = ["tyommmm <artyomhovsepyan135@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.2"
pytesseract = "0.3.10"
tesseract = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
